; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace_stack.c_stack_trace_open.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace_stack.c_stack_trace_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@LOCKDOWN_TRACEFS = common dso_local global i32 0, align 4
@stack_trace_seq_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @stack_trace_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stack_trace_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %7 = load i32, i32* @LOCKDOWN_TRACEFS, align 4
  %8 = call i32 @security_locked_down(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* %6, align 4
  store i32 %12, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load %struct.file*, %struct.file** %5, align 8
  %15 = call i32 @seq_open(%struct.file* %14, i32* @stack_trace_seq_ops)
  store i32 %15, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @security_locked_down(i32) #1

declare dso_local i32 @seq_open(%struct.file*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
